REPPBFORM-624 - index page changes and old version removed,

--- a/index-fr.html
+++ b/index-fr.html
@@ -217,17 +217,7 @@
                 <div class="row">
                     <h2>Liens de téléchargement de feuilles de style </h2>
                 </div>
-                <!--<div class="row">-->
-                    <!--<a href="./stylesheet/pharmabio_stylesheets_2_0_1.zip">Download v2.0 stylesheet zip file (Feb 07, 2019) </a>-->
-                <!--</div>-->
-                <!--<div class="row">-->
-                    <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_en.zip">Download V3.1 stylesheet zip file (English version, Feb 27, 2020) </a>-->
-                <!--</div>-->
-                <!--<div class="row">-->
-                    <!--<div class="col-md-12 form-group">-->
-                        <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Télécharger le fichier zip des feuilles de style V3.1 (version française) </a>-->
-                    <!--</div>-->
-                <!--</div>-->
+
                 <div class="row">
                     <div class="col-md-12 form-group">
                         <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0, V3.1, V4.0, V4.1 V4.2, V4.3 et V4.4 (mise à jour 28/02/2023) </a>
@@ -235,16 +225,26 @@
                 </div>
             </div>
 			
-			 <div>
-                <!--#include file="links-for-dev-fr.html"-->
-            </div>
         </div>
-        <!--content ends here -->
+		
+		<div>
+			<div class="row">
+				<h2>Internal User Links</h2>
+			</div>
+			<div class="row">
+				<a href="./prod_v42_wcag/company/companyINT-fr.html">Company Enrolment - Internal version 4.2.4</a>
+			</div>
+			<div class="row">
+				<a href="./pilot/repDiff/diffForm-en.html">Comparision tool (Deployed Sep 18, 2020)</a>
+			</div>
+		</div>
+        
+		<!--content ends here -->
     
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date de modification : 2024-02-12</dt>
+                    <dt>Date de modification : 2024-02-29</dt>
                 </dl>
             </div>
         </div>
