--- a/index-fr.html
+++ b/index-fr.html
@@ -148,8 +148,14 @@
                     <h2>Liens de modèle et le de formulaire</h2>
                 </div>
                 <div class="row">
-                    <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 02/12/2024)</a>
+                    <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 01/05/2024)</a>
                     <br>
+                </div>
+                <br>
+                <div class="alert alert-info">
+                    <p>
+                        Afin d’accéder à la version la plus récente du modèle, n’oubliez pas de supprimer fréquemment votre mémoire cache et d’« actualiser » les liens du modèle sur votre navigateur Web avant chaque utilisation.
+                    </p>
                 </div>
                 <div class="row">
                     <h2>En dehors du processus de transaction réglementaire</h2>
@@ -193,7 +199,7 @@
                     <!--</ul>-->
                 <!--</div>-->
                 <div class="row">
-                    <a href="./prod_v45/transaction/réglementaire-transaction.html">Modèle de transaction réglementaire (TR) pour les médicaments à usage humain et désinfectants ( mise à jour 28/02/2023)</a>
+                    <a href="./prod_v45/transaction/réglementaire-transaction.html">Modèle de transaction réglementaire (TR) pour les médicaments à usage humain et désinfectants ( mise à jour 01/05/2024)</a>
                     <ul>
                         <li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>
                         <li> Envoyé via la PCDE dans le dossier 1.2.1 pour les médicaments à usage humain ou partie I dossier 1.5 pour les médicaments vétérinaires de la transaction réglementaire (soumission).</li>
@@ -220,7 +226,7 @@
 
                 <div class="row">
                     <div class="col-md-12 form-group">
-                        <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0, V3.1, V4.0, V4.1 V4.2, V4.3 et V4.4 (mise à jour 28/02/2023) </a>
+                        <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style (mise à jour 01/05/2024) </a>
                     </div>
                 </div>
             </div>
