--- a/index.html
+++ b/index.html
@@ -153,8 +153,14 @@
                     <h2>REP Templates & Form Links</h2>
                 </div>
                 <div class="row">
-                    <a href="./version_history.html">Template version history  (updated 2024-02-12)</a>
+                    <a href="./version_history.html">Template version history  (updated 2024-05-01)</a>
                     <br>
+                </div>
+                <br>
+                <div class="alert alert-info">
+                    <p>
+                        In order to access the most up-to-date version of the template, please be reminded to delete your cache frequently and “refresh” the template links on your web browser prior to each use.
+                    </p>
                 </div>
                 <div class="row">
                     <h2>Outside the Regulatory Transaction Process</h2>
@@ -191,7 +197,7 @@
                     <h2>Within the Regulatory Transaction Process</h2>
                 </div>
                 <div class="row">
-                    <a href="./prod_v44/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (updated on 2023-02-28)</a>
+                    <a href="./transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (updated on 2024-05-01)</a>
                     <ul>
                         <li> Required with each regulatory transaction filed to Health Canada.</li>
                         <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (submission).</li>
@@ -222,7 +228,7 @@
 
                 <div class="row">
                     <div class="col-md-12 form-group">
-                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V3.0, V3.1, V4.0, V4.1, V4.2, V4.3 and V4.4 stylesheet zip file (Updated 2023-02-28) </a>
+                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download stylesheet zip file (Updated 2024-05-01) </a>
                     </div>
                 </div>
             </div>
