--- a/prod_v44/transaction/regulatory-transaction.html
+++ b/prod_v44/transaction/regulatory-transaction.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Regulatory Transaction Template: Regulatory Enrolment Process - Canada.ca"/>
     <meta property="dcterms.creator" content="Government of Canada, Health Canada"/>
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01"/>
-    <meta property="dcterms.modified" title="W3CDTF" content="2023-02-14"/>
+    <meta property="dcterms.modified" title="W3CDTF" content="2024-03-27"/>
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process"/>
     <meta property="dcterms.language" title="ISO639-2/T" content="eng"/>
 
@@ -200,12 +200,12 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">Regulatory Transaction Template: Regulatory Enrolment Process (REP) (Version 4.4.1)</h1>
+            <h1 property="name" id="wb-cont">Regulatory Transaction Template: Regulatory Enrolment Process (REP) (Version 4.4.2)</h1>
             <p class="pagetag">
                 <strong>From <a href="https://www.canada.ca/en/health-canada.html">Health Canada</a></strong>
             </p>
         </div>
-        <div class=" col-md-12 module-table-contents" id="content_table">
+<!--        <div class=" col-md-12 module-table-contents" id="content_table">
             <section class="panel panel-default">
                 <header class="panel-heading clearfix">
                     <h2  class="panel-title">Table of contents</h2>
@@ -219,7 +219,7 @@
                     </ul>
                 </div>
             </section>
-        </div>
+        </div>-->
 
     </div>
     <!-- the main content -->
@@ -238,7 +238,7 @@
 	  </div>
 	  <dl id="wb-dtmd">
 	    <dt>Date modified:&#32;</dt>
-	    <dd><time property="dateModified">2023-02-14</time></dd>
+	    <dd><time property="dateModified">2024-03-27</time></dd>
 	  </dl>
 	</div>
 
@@ -279,7 +279,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-en_20230214_1110.min.js"></script>
+<script src="app/scripts/transactionAppEXT-en_20240327_0607.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
