Changes to index pages and revision history

--- a/version_history.html
+++ b/version_history.html
@@ -150,10 +150,37 @@
         <div>
             <div class="row">
                 <p>Health Canada has updated the Regulatory Enrolment Process (REP) templates to reflect process changes and improvements. Refer to the Guidance Document: Regulatory Enrolment Process (REP) – Drugs for Human and Veterinary Use and Disinfectants for more information on the templates.</p>
-                <p>In order to access the most up-to-date version of the template, please be reminded to delete your cache frequently and “refresh” the template links on your web browser prior to each use.</p>
+                <br>
                 <p>Should you have any questions regarding the content of this document, please contact <a href="mailto:ereview@hc-sc.gc.ca" lang="en">ereview@hc-sc.gc.ca</a>.</p>
             </div>
-
+            <br>
+            <div class="alert alert-info">
+                <p>In order to access the most up-to-date version of the template, please be reminded to delete your cache frequently and “refresh” the template links on your web browser prior to each use.</p>
+            </div>
+            <div class="row">
+				<h3>May 1, 2024 Release</h3>
+			</div>
+			<div class="row">
+				<table class="col-md-12">
+					<tr>
+						<th class="col-md-3">Template</th>
+						<th class="col-md-9">Change</th>
+					</tr>
+					<tr>
+						<td class="col-md-3">Regulatory Transaction (RT) Template <br> <strong>Version 4.4.2</strong></td>
+						<td class="col-md-9">
+							<ul>
+								<li>Updated the definition for Regulatory Activity Type Undefined Regulatory Activity (UDRA)</li>
+                                <li>Updated the picklist options for Regulatory Transaction Description when UDRA is selected as the Regulatory Activity Type</li>
+                                <li>Added definitions for all picklist options for Regulatory Transaction Description when UDRA is selected as the Regulatory Activity Type</li>
+								<li>Updated Regulatory Transaction Description for Discontinuation of Sale Notification and Notification for Interruption of Sale</li>
+								<li>Added definitions for Discontinuation of Sale Notification and Notification for Interruption of Sale</li>
+								<li>Updated the Regulatory Activity Type that appear with the Regulatory Transaction Description for Discontinuation of Sale Notification and Notification for Interruption of Sale</li>
+                            </ul>
+						</td>
+					</tr>
+				</table>
+			</div>	
 			<div class="row">
 				<h3>February 12, 2024 Release</h3>
 			</div>
