REP MD RT - update to numerical fields to disallow other characters

--- a/mds/transaction/en/md-regulatory-transaction.html
+++ b/mds/transaction/en/md-regulatory-transaction.html
@@ -49,7 +49,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-AEPYSWZ6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-AEPYSWZ6.css"></noscript><link rel="modulepreload" href="chunk-VVSB2XIP.js"></head>
+</style><link rel="stylesheet" href="styles-AEPYSWZ6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-AEPYSWZ6.css"></noscript><link rel="modulepreload" href="chunk-73FKHN4V.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -232,5 +232,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-ZIYJLF3D.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-LOHSIX4B.js" type="module"></script></body>
 </html>
