REP MD RT - index page fixed link

--- a/mds_index-fr.html
+++ b/mds_index-fr.html
@@ -93,7 +93,7 @@
 				
 					
 					<h2>Dans le cadre du processus de transaction réglementaire</h2>
-					<h3><a href="https://lam-dev.hres.ca/rep-dev/mds/transaction/en/index.html">Modèle de transaction réglementaire (à venir)</a></h3>
+					<h3><a href="https://lam-dev.hres.ca/rep-dev/mds/transaction/fr/im-transaction-reglementaire.html">Modèle de transaction réglementaire (4 avril 2024)</a></h3>
 					<ul>
 						<li>
 						Envoyé par la PCDE dans le cadre de la transaction réglementaire (demande).
