--- a/mds/internal/company/en/index-internal.html
+++ b/mds/internal/company/en/index-internal.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-04-04">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-04-08">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<meta name='description' content="Regulatory Enrolment Process Forms for Medical Devices"/>
 <meta name="keywords" content="Health, Regulatory Enrolment Process, REP, Medical Devices"/>
@@ -169,7 +169,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-04-04",
+					"dateModified": "2024-04-08",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -232,5 +232,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-MK77O6EA.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-TICKRGZF.js" type="module"></script></body>
 </html>
