--- a/mds/internal/company/fr/index-internal.html
+++ b/mds/internal/company/fr/index-internal.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-04-04">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-04-08">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<meta name='description' content="Formularies du processus d'inscription réglementaire pour les instruments médicaux"/>
 <meta name="keywords" content="Santé, Processus d'inscription réglementaire, PIR, Instruments médicaux"/>
@@ -169,7 +169,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-04-04",
+					"dateModified": "2024-04-08",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -232,5 +232,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-U7276HXC.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-E75VSSBP.js" type="module"></script></body>
 </html>
