Date change and typo fix

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -170,7 +170,7 @@
                         <td class="col-md-9">
 							<ul>
 								<li>Mise à jour de la définition du type d’activité de réglementation d’une activité réglementaire non définie (ARND)</li>
-                                <li>Mise à jour des options de la liste déroulante pour la description de la transaction réglementaire lorsque l’ARND est sélectionnée comme type d’activité de réglementation. </li>
+                                <li>Mise à jour des options de la liste déroulante pour la description de la transaction réglementaire lorsque l’ARND est sélectionné comme type d’activité de réglementation. </li>
                                 <li>Ajout des définitions pour toutes les options de liste déroulante pour la description de la transaction réglementaire lorsque l’ARND est sélectionné comme type d’activité de réglementation.</li>
 								<li>Mise à jour de la description de la transaction réglementaire pour l’avis de cessation de vente et l’avis d’interruption de vente</li>
 								<li>Ajout des définitions de la transaction pour l’avis de cessation de vente et l’avis d’interruption de vente</li>
