REP MD AI V3.0.0 Deployment 2024-05-01

--- a/mds/applicationInfo/fr/im-information-demande-homologation.html
+++ b/mds/applicationInfo/fr/im-information-demande-homologation.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2024-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-04-29">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-05-01">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<meta name='description' content="Formularies du processus d'inscription réglementaire pour les instruments médicaux"/>
 
@@ -55,7 +55,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-AEPYSWZ6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-AEPYSWZ6.css"></noscript><link rel="modulepreload" href="chunk-2Q6LGN5B.js"></head>
+</style><link rel="stylesheet" href="styles-AEPYSWZ6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-AEPYSWZ6.css"></noscript><link rel="modulepreload" href="chunk-25HZXQ4A.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -176,7 +176,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-04-29",
+					"dateModified": "2024-05-01",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -239,5 +239,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-UFJ2KKK5.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-SEXKD2RO.js" type="module"></script></body>
 </html>
