--- a/mds/applicationInfo/en/md-application-information.html
+++ b/mds/applicationInfo/en/md-application-information.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2024-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-04-29">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-05-01">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<meta name='description' content="Regulatory Enrolment Process Forms for Medical Devices"/>
 
@@ -56,7 +56,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-AEPYSWZ6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-AEPYSWZ6.css"></noscript><link rel="modulepreload" href="chunk-2Q6LGN5B.js"></head>
+</style><link rel="stylesheet" href="styles-AEPYSWZ6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-AEPYSWZ6.css"></noscript><link rel="modulepreload" href="chunk-25HZXQ4A.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -176,7 +176,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-04-29",
+					"dateModified": "2024-05-01",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -239,5 +239,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-5KFBI6A3.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-OZS4LUPS.js" type="module"></script></body>
 </html>
