REP MD RT dev deployment

--- a/mds/transaction/fr/im-transaction-reglementaire.html
+++ b/mds/transaction/fr/im-transaction-reglementaire.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-05-03">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-05-23">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<meta name='description' content="Formularies du processus d'inscription réglementaire pour les instruments médicaux"/>
 <meta name="keywords" content="Santé, Processus d'inscription réglementaire, PIR, Instruments médicaux"/>
@@ -20,26 +20,25 @@
 <meta property="dcterms.subject" title="gccore" content="Instruments médicaux, produits de santé; Processus d’inscription réglementaire"/>
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
-		<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/cdts/compiled/soyutils.js"></script>
-		<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/cdts/compiled/wet-fr.js"></script>
+		<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/cdts/compiled/soyutils.js"></script>
+		<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/cdts/compiled/wet-fr.js"></script>
 		<noscript>
 			<!-- Write closure fall-back static file -->
 			<!--[if gte IE 9 | !IE ]><!-->
-<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/wet-boew/css/theme.min.css">
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/cdts/cdtsfixes.css">
+<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/wet-boew/css/theme.min.css" integrity="sha512-s8jOBuFIeqZHrV/Nr2TRg2c0JW9Xkk86GjXYc7ER0rlAFRCuE00yGeF0Srj4CUHhY/Ty7D48wSp8Wm+oT+GnJw==" crossorigin="anonymous">
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/cdts/cdtsfixes.css" integrity="sha512-O8/COC4Cq1nQOxirAImSFJ1/ZrAHwbpiwr+A5mub0T9sbEfCb5NlcQc872m32R8IKAUO+9R4olSntWMvwgav5Q==" crossorigin="anonymous">
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/wet-boew/assets/favicon.ico" rel="shortcut icon">
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/wet-boew/css/ie8-theme.min.css">
+<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/wet-boew/assets/favicon.ico" rel="shortcut icon">
 
 
 <![endif]-->
 <!--[if lte IE 9]><![endif]-->
 <!-- Are you using the application templates? If so add the following CSS file -->
-<!-- <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/cdts/cdtsapps.css">-->
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/wet-boew/css/noscript.min.css">
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/cdts/cdtsnoscript.css">
+<!-- <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/cdts/cdtsapps.css" integrity="sha512-KNdBIVDl7C3m1gidn7fJ+dggbD4by1ZjEbWG+QR/D+ryO6etHLajka4LKcD9ys0288DTEroc7yYzSOzq0injPw==" crossorigin="anonymous">-->
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/wet-boew/css/noscript.min.css" integrity="sha512-IKG7xg3yUdv4YHOxJXnuqGY6C1wlF0d5rZZOb2ODWzlBbr44CjDfZVzqjqADQERCs3lR0Xza/aoxFvLJCwGgwA==" crossorigin="anonymous">
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/cdts/cdtsnoscript.css" integrity="sha512-pKYJ8b1T/bA9RGk3wPeYyVwa6ATJC9d6nIglnmkX/JYP11LzwBTh2FgEEGPU2fcff6OIgOHEMavI26s2gltejg==" crossorigin="anonymous">
 		</noscript>
 		<!-- Write closure template -->
 		<script>
@@ -48,7 +47,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-AEPYSWZ6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-AEPYSWZ6.css"></noscript><link rel="modulepreload" href="chunk-H2US4GQH.js"></head>
+</style><link rel="stylesheet" href="styles-7GLI3OK7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-7GLI3OK7.css"></noscript><link rel="modulepreload" href="chunk-OXNP3VXU.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -62,12 +61,12 @@
 <div id="wb-bnr" class="container">
 <div class="row">
 <div class="brand col-xs-9 col-sm-5 col-md-4" property="publisher" typeof="GovernmentOrganization">
-<a href="https://www.canada.ca/fr.html" property="url"><img src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/wet-boew/assets/sig-blk-fr.svg" alt="Gouvernement du Canada" property="logo"><span class="wb-inv"> / <span lang="en">Government of Canada</span></span></a><meta property="name" content="Gouvernement du Canada">
+<a href="https://www.canada.ca/fr.html" property="url"><img src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/wet-boew/assets/sig-blk-fr.svg" alt="Gouvernement du Canada" property="logo"><span class="wb-inv"> / <span lang="en">Government of Canada</span></span></a><meta property="name" content="Gouvernement du Canada">
 <meta property="areaServed" typeof="Country" content="Canada">
-<link id="StdIssueWasHere1" property="logo" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/wet-boew/assets/wmms-blk.svg">
+<link id="StdIssueWasHere1" property="logo" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/wet-boew/assets/wmms-blk.svg">
 </div>
 <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4">
-<h2>Recherche</h2>
+<h2>Rechercher</h2>
 <form action="https://www.canada.ca/fr/sr/srb.html" method="get" name="cse-search-box" role="search" accept-charset="utf-8">
 <div class="form-group wb-srch-qry">
 <label for="wb-srch-q" class="wb-inv">Rechercher dans Canada.ca</label>
@@ -76,7 +75,7 @@
 </datalist>
 </div>
 <div class="form-group submit">
-<button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small" name="wb-srch-sub"><span class="glyphicon-search glyphicon"></span><span class="wb-inv">Recherche</span></button>
+<button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small" name="wb-srch-sub"><span class="glyphicon-search glyphicon"></span><span class="wb-inv">Rechercher</span></button>
 </div>
 </form>
 </section>
@@ -99,7 +98,7 @@
 <li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/culture.html">Culture, histoire et sport</a></li>
 <li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/police.html">Services de police, justice et urgences</a></li>
 <li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/transport.html">Transport et infrastructure</a></li>
-<li role="presentation"><a role="menuitem" href="https://international.gc.ca/world-monde/index.aspx?lang=fra">Canada et le monde</a></li>
+<li role="presentation"><a role="menuitem" href="https://international.gc.ca/world-monde/index.aspx?lang=fra">Le Canada et le monde</a></li>
 <li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/finance.html">Argent et finances</a></li>
 <li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/science.html">Science et innovation</a></li>
 </ul>
@@ -152,24 +151,24 @@
 			<!--content ends here -->
 			<div id="def-preFooter">
 				<!-- Write closure fall-back static file -->
-				<div class="pagedetails">
+				<section class="pagedetails ">
+<h2 class="wb-inv">"Détails de la page"</h2>
 <div class="row">
-<div class="col-sm-6 col-md-5 col-lg-4">
-<a href="https://www.canada.ca/fr/signaler-probleme.html" class="btn btn-default btn-center">Signaler un problème sur cette page</a>
-</div>
-</div>
+<div class="col-xs-12">
 <dl id="wb-dtmd">
 <dt>Date de modification&#160;:&#32;</dt>
 <dd><time property="dateModified">2019-03-01</time></dd>
 </dl>
 </div>
+</div>
+</section>
 
 			</div>
 			<!-- Write closure template -->
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-05-03",
+					"dateModified": "2024-05-23",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -177,27 +176,44 @@
 		<div id="def-footer">
 			<!-- Write closure fall-back static file -->
 			<footer id="wb-info">
-<div id="transactFooter" class="landscape">
-<nav class="container wb-navcurr" aria-labelledby="aboutGov">
-<h2 class="wb-inv" id="aboutGov">À propos du gouvernement</h2>
-<ul class="list-unstyled colcount-sm-2 colcount-md-3">
-<li><a href="https://www.canada.ca/fr/contact.html">Contactez-nous</a></li>
+<h2 class="wb-inv">À propos de ce site</h2>
+<div id="transactFooter" class="gc-main-footer">
+<div class="container">
+<nav>
+<h3>Gouvernement du Canada</h3>
+<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
+<li><a href="https://www.canada.ca/fr/contact.html">Toutes les coordonnées</a></li>
 <li><a href="https://www.canada.ca/fr/gouvernement/min.html">Ministères et organismes</a></li>
-<li><a href="https://www.canada.ca/fr/gouvernement/fonctionpublique.html">Fonction publique et force militaire</a></li>
-<li><a href="https://www.canada.ca/fr/nouvelles.html">Nouvelles</a></li>
-<li><a href="https://www.canada.ca/fr/gouvernement/systeme/lois.html">Traités, lois et règlements</a></li>
-<li><a href="https://www.canada.ca/fr/transparence/rapports.html">Rapports à l'échelle du gouvernement</a></li>
-<li><a href="https://pm.gc.ca/fr">Premier ministre</a></li>
 <li><a href="https://www.canada.ca/fr/gouvernement/systeme.html">À propos du gouvernement</a></li>
-<li><a href="https://open.canada.ca/fr">Gouvernement ouvert</a></li>
+</ul>
+<h4><span class="wb-inv">Thèmes et sujets</span></h4>
+<ul class="list-unstyled colcount-sm-2 colcount-md-3">
+<li><a href="https://www.canada.ca/fr/services/emplois.html">Emplois</a></li>
+<li><a href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Immigration et citoyenneté</a></li>
+<li><a href="https://voyage.gc.ca/">Voyage et tourisme</a></li>
+<li><a href="https://www.canada.ca/fr/services/entreprises.html">Entreprises</a></li>
+<li><a href="https://www.canada.ca/fr/services/prestations.html">Prestations</a></li>
+<li><a href="https://www.canada.ca/fr/services/sante.html">Santé</a></li>
+<li><a href="https://www.canada.ca/fr/services/impots.html">Impôts</a></li>
+<li><a href="https://www.canada.ca/fr/services/environnement.html">Environnement et ressources naturelles</a></li>
+<li><a href="https://www.canada.ca/fr/services/defense.html">Sécurité nationale et défense</a></li>
+<li><a href="https://www.canada.ca/fr/services/culture.html">Culture, histoire et sport</a></li>
+<li><a href="https://www.canada.ca/fr/services/police.html">Services de police, justice et urgences</a></li>
+<li><a href="https://www.canada.ca/fr/services/transport.html">Transport et infrastructure</a></li>
+<li><a href="https://international.gc.ca/world-monde/index.aspx?lang=fra">Le Canada et le monde</a></li>
+<li><a href="https://www.canada.ca/fr/services/finance.html">Argent et finance</a></li>
+<li><a href="https://www.canada.ca/fr/services/science.html">Science et innovation</a></li>
+<li><a href="https://www.canada.ca/fr/services/autochtones.html">Autochtones</a></li>
+<li><a href="https://www.canada.ca/fr/services/veterans-militaire.html">Vétérans et militaires</a></li>
+<li><a href="https://www.canada.ca/fr/services/jeunesse.html">Jeunesse</a></li>
 </ul>
 </nav>
 </div>
-<div class="brand">
-<div class="container">
-<div class="row">
-<nav class="col-md-9 col-lg-10 ftr-urlt-lnk" aria-labelledby="aboutSite">
-<h2 class="wb-inv" id="aboutSite">À propos du site</h2>
+</div>
+<div class="gc-sub-footer">
+<div class="container d-flex align-items-center">
+<nav>
+<h3 class="wb-inv">Organisation du gouvernement du Canada</h3>
 <ul>
 <li><a href="https://www.canada.ca/fr/sociaux.html">Médias sociaux</a></li>
 <li><a href="https://www.canada.ca/fr/mobile.html">Applications mobiles</a></li>
@@ -206,12 +222,8 @@
 <li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li>
 </ul>
 </nav>
-<div class="col-xs-6 visible-sm visible-xs tofpg">
-<a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a>
-</div>
-<div id="StdIssueWasHere2" class="col-xs-6 col-md-2 text-right">
-<img src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_46/wet-boew/assets/wmms-blk.svg" alt="Symbole du gouvernement du Canada">
-</div>
+<div class="wtrmrk align-self-end">
+<img src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/wet-boew/assets/wmms-blk.svg" alt="Symbole du gouvernement du Canada">
 </div>
 </div>
 </div>
@@ -232,5 +244,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-ZH7WROPZ.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-VYYVJ5YT.js" type="module"></script></body>
 </html>
