REPPBFORM-635. Changed comparison tool link

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 						<a href="./prod_v42_wcag/company/companyINT-en.html">Company Enrolment - Internal version 4.2.4</a>
 					</div>
 					<div class="row">
-						<a href="./pilot/repDiff/diffForm-en.html">Comparison tool (Deployed Sep 18, 2020)</a>
+						<a href="https://lam-dev.hres.ca/REP-Form-Internal/PROD/repDiff/diffForm-en.html">Comparison tool (Deployed Sep 18, 2020)</a>
 					</div>
 				</div>
 
