--- a/mds-index-prod.html
+++ b/mds-index-prod.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Health Canada" />
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-06-27">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-06-28">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<!-- build:metaData-en.html -->
 		<!-- Meta data-->
@@ -41,7 +41,7 @@
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
 					"lang": "fr",
-					"href": "mds-index-prod-fr.html",
+					"href": "mds-index-fr.html",
 					"text": "Français"
 				}],
 				"breadcrumbs": [{
@@ -53,6 +53,9 @@
 				}, {
 					"title": "Health Canada",
 					"href": "https://www.canada.ca/en/health-canada.html"
+				}, {
+					"title": "Regulatory enrolment process (REP) - Canada.ca",
+					"href": "https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process.html"
 				}],
 				"cdnEnv": "prod"
 			});
@@ -181,7 +184,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-06-27",
+					"dateModified": "2024-06-28",
 					"cdnEnv": "prod"
 				});
 			</script>
