REPMDFORM-287 REP MD index page changes

--- a/mds-index-prod-fr.html
+++ b/mds-index-prod-fr.html
@@ -40,7 +40,7 @@
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
 					"lang": "en",
-					"href": "mds-index.html",
+					"href": "mds-index-prod.html",
 					"text": "English"
 				}],
 				"breadcrumbs": [{
