REP MD index fixes
Changed mds index to use dash instead of underscore
Removed the production index page for review

--- a/mds-index-fr.html
+++ b/mds-index-fr.html
@@ -40,7 +40,7 @@
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
 					"lang": "en",
-					"href": "mds_index.html",
+					"href": "mds-index.html",
 					"text": "English"
 				}],
 				"breadcrumbs": [{
