--- a/mds-index.html
+++ b/mds-index.html
@@ -41,7 +41,7 @@
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
 					"lang": "fr",
-					"href": "mds_index-fr.html",
+					"href": "mds-index-fr.html",
 					"text": "Français"
 				}],
 				"breadcrumbs": [{
