--- a/mds/company/en/index-internal.html
+++ b/mds/company/en/index-internal.html
@@ -139,7 +139,7 @@
 				},
 				        {
             "title": "Health Canada  Regulatory Enrolment Process (REP) for Medical Devices",
-            "href": "https://lam-dev.hres.ca/rep-dev/mds-index.html"
+            "href": "https://lam-dev.hres.ca/REP-Form-Internal/mds-index.html"
         }
 				],
 				"cdnEnv": "prod"
@@ -157,7 +157,7 @@
 <div class="col-xs-12">
 <dl id="wb-dtmd">
 <dt>Date modified:&#32;</dt>
-<dd><time property="dateModified">2019-03-01</time></dd>
+<dd><time property="dateModified">2024-07-31</time></dd>
 </dl>
 </div>
 </div>
@@ -168,7 +168,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-06-28",
+					"dateModified": "2024-07-31",
 					"cdnEnv": "prod"
 				});
 			</script>
