--- a/mds/company/fr/index-internal.html
+++ b/mds/company/fr/index-internal.html
@@ -138,7 +138,7 @@
 				}, 
 				        {
             "title": "Processus d’inscription réglementaire (PIR) pour les instruments médicaux",
-            "href": "https://lam-dev.hres.ca/rep-dev/mds-index-fr.html"
+            "href": "https://lam-dev.hres.ca/REP-Form-Internal/mds-index-fr.html"
         }
 
 				],
@@ -157,7 +157,7 @@
 <div class="col-xs-12">
 <dl id="wb-dtmd">
 <dt>Date de modification&#160;:&#32;</dt>
-<dd><time property="dateModified">2019-03-01</time></dd>
+<dd><time property="dateModified">2024-07-31</time></dd>
 </dl>
 </div>
 </div>
@@ -168,7 +168,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-06-28",
+					"dateModified": "2024-07-31",
 					"cdnEnv": "prod"
 				});
 			</script>
