MF v2.0.0 dev deployment fixes

--- a/master-file/en/master-file-form.html
+++ b/master-file/en/master-file-form.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-26">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-09-03">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-09-16">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Master File Forms"/>
@@ -20,7 +20,7 @@
 <meta property="dcterms.title" content="Regulatory Transaction Template: Master File Application Form - Canada.ca"/>
 <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Master Files">
 		
-		<!-- Meta data -->
+		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/cdts/compiled/soyutils.js"></script>
 		<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_0/cdts/compiled/wet-en.js"></script>
@@ -51,7 +51,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-RFERAXR7.js"></head>
+</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-DSNPAZ3F.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -181,7 +181,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-09-03",
+					"dateModified": "2024-09-16",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -258,5 +258,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-IRMLUZTY.js" type="module"></script><script src="main-5CP6CADG.js" type="module"></script></body>
+	<script src="polyfills-IRMLUZTY.js" type="module"></script><script src="main-I5ZOFA3V.js" type="module"></script></body>
 </html>
