--- a/master-file/fr/formulaire-fiche-maitresse.html
+++ b/master-file/fr/formulaire-fiche-maitresse.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-26">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-09-03">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-09-16">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		
 		<meta name="description" content="Formulaires de fiches maîtresses">
@@ -50,7 +50,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-RFERAXR7.js"></head>
+</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-DSNPAZ3F.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -180,7 +180,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-09-03",
+					"dateModified": "2024-09-16",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -257,5 +257,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-IRMLUZTY.js" type="module"></script><script src="main-ER6NJC6U.js" type="module"></script></body>
+	<script src="polyfills-IRMLUZTY.js" type="module"></script><script src="main-2MAPWADS.js" type="module"></script></body>
 </html>
