REPPBFORM-651 - revision page changes for RT Version 4.4.3 update

--- a/historique_revisions.html
+++ b/historique_revisions.html
@@ -82,10 +82,12 @@
 									<li>Mise à jour les instructions pour numéro de contrôle</li>
 									<li>Suppression du champ responsable de l'activité réglementaire pour le dossier vétérinaire</li>
 									<li>Changé responsable de l’activité réglementaire de Vigilance après la commercialisation à Vigilance après la commercialisation (pour la Direction des produits de santé commercialisés)</li>
-									<li>Ajout des définitions pour divers types d'activité réglementaire</li>
-									<li>Ajout d’un nouveau type d'activité réglementaire Avis des mesures prises dans les pays étrangers (AME-VC)</li>
-									<li>Suppression de la type d'activité réglementaire présentation de drogue nouvelle avec flexibilités - médicament COVID-19 désigné (PDN CV) du dossier vétérinaire</li>
-									<li>Ajout des transactions de réglementation : Document final de communication sur les risques, Demande de rapport(s) d'examen est sélectionné et Notification immédiate</li>
+									<li>Ajout des définitions pour divers types d'activité réglementaire et transactions réglementaire</li>
+									<li>Mise à jour la liste de transactions réglementaire pour divers types d’activités réglementaires</li>
+									<li>Ajout d’un nouveau type d'activité réglementaire : Avis des mesures prises dans les pays étrangers (AME-VC)</li>
+									<li>Suppression de la type d'activité réglementaire : présentation de drogue nouvelle avec flexibilités - médicament COVID-19 désigné (PDN CV) et Conseil de coopération en matière de réglementation (RCC) du dossier vétérinaire</li>
+									<li>Ajout des transactions réglementaire : Document final de communication sur les risques, Demande de rapport(s) d'examen est sélectionné et Notification immédiate</li>
+									<li>Ajout le champ demandeur d’information sollicitée pour la transaction réglementaire : Commentaires sur le sommaire des motifs de décision (SMD)</li>
 									<li>Mise à jour de la bulle d’information pour la section d'autorisation de tiers</li>
 								</ul>
 							</td>
