--- a/version_history.html
+++ b/version_history.html
@@ -83,10 +83,12 @@
 									<li>Updated instructions for Control Number</li>
 									<li>Removed Regulatory Activity Lead field for Veterinary dossier</li>
 									<li>Changed Regulatory Activity Lead from Post-Market Vigilance to Post-Market Vigilance (for Marketed Health Products Directorate)</li>
-									<li>Added definitions for various regulatory activity types</li>
-									<li>Added new Regulatory Activity Type Notification of Foreign Action (NFA-PV)</li>
-									<li>Removed the Regulatory Activity Type New Drug Submission with flexibilities for Designated COVID-19 Drugs (NDS CV) from Veterinary Dossier</li>
+									<li>Added definitions for various regulatory activity types and transactions descriptions</li>
+									<li>Updated the transaction description list for various regulatory activity types</li>
+									<li>Added new Regulatory Activity Type: Notification of Foreign Action (NFA-PV)</li>
+									<li>Removed the Regulatory Activity Type: New Drug Submission with flexibilities for Designated COVID-19 Drugs (NDS CV) and Regulatory Cooperation Council (RCC) from Veterinary Dossier</li>
 									<li>Added the Regulatory Transaction Descriptions: Final Risk Communication Document, Immediate Notification and Request Review Reports</li>
+									<li>Added requestor name field for transaction description: Comments on Summary Basis of Decision (SBD)</li>
 									<li>Updated info bubble for the third party authorization section</li>
 								</ul>
 							</td>
